--- a/src/components/OrderCard/OrderItemsList.module.css
+++ b/src/components/OrderCard/OrderItemsList.module.css
@@ -5,7 +5,6 @@
   column-width: var(--order-card-item-column-width, 240px);
   column-gap: var(--order-card-item-column-gap, 1rem);
   column-fill: auto;
-  height: 100%;
   width: max-content;
   min-width: 100%;
   max-height: 100%;
