--- a/src/components/OrdersArea/OrdersArea.module.css
+++ b/src/components/OrdersArea/OrdersArea.module.css
@@ -2,6 +2,7 @@
   flex: 1;
   min-height: 0;
   min-width: 0;
+  height: 100%;
   padding: 1.5rem;
   background-color: rgba(30, 41, 59, 0.9);
   display: flex;
